# frameworks/dotnet/carter/Implementation/Routes/ParametersRoutes.cs
@@ -15,5 +15,7 @@ public sealed class ParametersRoutes : ICarterModule
         app.MapGet("/parameters/{one}/segment/literal", (int one, Payloads p) => new Echoed<ParametersOne>(p.Small, new(one)));
 
         app.MapGet("/parameters/{one}/with-second/{two}", (int one, int two, Payloads p) => new Echoed<ParametersTwo>(p.Small, new(one, two)));
+
+        app.MapGet("/parameters/{one}/{two}/{three}", (int one, int two, int three, Payloads p) => new Echoed<ParametersThree>(p.Small, new(one, two, three)));
     }
 }
